[gd_scene load_steps=13 format=4 uid="uid://dwwlnrtobyuml"]

[ext_resource type="Texture2D" uid="uid://wi6e3alnmqh0" path="res://sprites/main.png" id="1_btdyi"]
[ext_resource type="Script" uid="uid://wlww281eau6a" path="res://scripts/level_up_platform.gd" id="1_byf52"]
[ext_resource type="Script" uid="uid://b4w2husdtviva" path="res://sprites/sprite_particle_emitter.gd" id="3_n2wbt"]
[ext_resource type="Script" uid="uid://wmfb0j47nkka" path="res://scripts/custom_particle.gd" id="4_ei45e"]
[ext_resource type="PackedScene" uid="uid://dkeyppodrsyaq" path="res://scenes/level_up_text.tscn" id="5_cdd2r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_byf52"]
size = Vector2(8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_btdyi"]
texture = ExtResource("1_btdyi")
texture_region_size = Vector2i(8, 8)
10:6/0 = 0

[sub_resource type="TileSet" id="TileSet_vxux4"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_btdyi")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_byf52"]
texture = ExtResource("1_btdyi")
texture_region_size = Vector2i(8, 8)
11:6/0 = 0

[sub_resource type="TileSet" id="TileSet_btdyi"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_byf52")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btdyi"]
size = Vector2(96, 30)

[sub_resource type="Resource" id="Resource_e7xp6"]
script = ExtResource("4_ei45e")
particle_name = "level_up_text"
particle_scene = ExtResource("5_cdd2r")
metadata/_custom_type_script = "uid://wmfb0j47nkka"

[node name="LevelUpPlatform" type="StaticBody2D" node_paths=PackedStringArray("_particle_emitter")]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_byf52")
_particle_emitter = NodePath("SpriteParticleEmitter")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(12, 1)
shape = SubResource("RectangleShape2D_byf52")
disabled = true

[node name="Active" type="TileMapLayer" parent="."]
visible = false
position = Vector2(0, 4)
tile_map_data = PackedByteArray("AAD/////AAAKAAYAAAAAAP//AAAKAAYAAAABAP//AAAKAAYAAAACAP//AAAKAAYAAAADAP//AAAKAAYAAAAEAP//AAAKAAYAAAAFAP//AAAKAAYAAAD+////AAAKAAYAAAD9////AAAKAAYAAAD8////AAAKAAYAAAD7////AAAKAAYAAAD6////AAAKAAYAAAA=")
tile_set = SubResource("TileSet_vxux4")

[node name="Inactive" type="TileMapLayer" parent="."]
position = Vector2(0, 4)
tile_map_data = PackedByteArray("AAD6////AAALAAYAAAD7////AAALAAYAAAD8////AAALAAYAAAD9////AAALAAYAAAD+////AAALAAYAAAD/////AAALAAYAAAAAAP//AAALAAYAAAABAP//AAALAAYAAAACAP//AAALAAYAAAADAP//AAALAAYAAAAEAP//AAALAAYAAAAFAP//AAALAAYAAAA=")
tile_set = SubResource("TileSet_btdyi")

[node name="PlayerSensor" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSensor"]
position = Vector2(0, -23)
shape = SubResource("RectangleShape2D_btdyi")

[node name="SpriteParticleEmitter" type="Node" parent="."]
script = ExtResource("3_n2wbt")
_particles = Array[ExtResource("4_ei45e")]([SubResource("Resource_e7xp6")])
metadata/_custom_type_script = "uid://b4w2husdtviva"

[connection signal="platform_triggered" from="." to="Active" method="show"]
[connection signal="platform_triggered" from="." to="Inactive" method="hide"]
[connection signal="platform_triggered" from="." to="CollisionShape2D" method="set_disabled" flags=3 binds= [false]]
[connection signal="body_entered" from="PlayerSensor" to="." method="_on_player_entered" flags=6 unbinds=1]
